--- a/package.json
+++ b/package.json
@@ -30,14 +30,27 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@fhevm/hardhat-plugin": "^0.0.1-0",
+    "@fhevm/mock-utils": "^0.0.1-0",
+    "@fhevm/solidity": "^0.7.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@zama-fhe/oracle-solidity": "^0.0.4-0",
+    "@zama-fhe/relayer-sdk": "^0.1.2",
+    "chai": "^4.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "ethers": "^6.15.0",
+    "hardhat": "^2.26.3",
     "tailwindcss": "^4.1.12",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
